Revision history for {{$dist->name}}

{{$NEXT}}

4.300010  2012-03-15 21:38:58 America/New_York
          The GatherDir::Template documentation has been improved
          (Thanks, Christopher J. Madsen!)

          Depend on a more recent version of Config::MVP, which requires a fix
          in Class::Load to fix detection of plugin compilation errors on
          perl5.8.8 (see Class::Load Changes file for details.)  (Karen
          Etheridge)

          Add --versions support to listdeps and authordeps (Cory G Watson)

          Documentation fixes

4.300009  2012-02-21 19:38:29 America/New_York
          PruneCruft also excludes the _Inline/ directory and MYMETA.json

          MakeMaker has been refactored to make it easier to subclass
          (Thanks, Christopher J. Madsen!)

4.300008  2012-02-16 17:28:34 America/New_York
          work around qr//m bug in 5.8.8 and earlier (thanks, Randy Stauner!)

          Fix to MakeMaker plugin: use separate scope for code that changes
          namespace, when inserting ShareDir code. (RT#74788) (Karen Etheridge)

4.300007  2012-02-02 22:23:05 America/New_York
          Remove configs beginning with ':' from argument list before
          constructing that config; fixes issue where :version was
          being passed to a plugin that had a strict constructor. (Karen
          Etheridge)

4.300006  2011-12-30 15:28:34 America/New_York
          New methods dist_basename & archive_filename allow plugins
          to reliably get that information.  This makes TestRelease
          testable. (Thanks, Kent Fredric & Christopher J. Madsen!)

          Your PAUSE password will now no be echoed if entered at the
          prompt, on most operating systems (Thanks, Mike Doherty!)

          replace use of Version::Requirements with CPAN::Meta::Requirements,
          its replacement

4.300005  2011-12-13 08:49:19 America/New_York
          Prereqs now actually understands -relationship as documented